03_infrastructure/02_configs/traefik/gateway-class.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: ${tr_gateway_class}-test
spec:
  controllerName: "example.net/gateway-controller"
---
