03_infrastructure/02_configs/traefik/reference-grant.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: monitoring-grafana
  namespace: ${ENVIRONMENT}-${ns_monitoring}
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: ${ns_traefik}
  to:
    - group: ""
      kind: Secret
      name: monitoring-grafana-tls
---
