03_infrastructure/02_configs/traefik/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ${tr_gateway}
  namespace: ${ns_traefik}
  annotations:
    cert-manager.io/cluster-issuer: ${K8S_CLUSTER_ISSUER}
spec:
  gatewayClassName: ${tr_gateway_class}

  # https://github.com/kubernetes-sigs/gateway-api/issues/4425
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
          namespaces:
            from: All

  allowedListeners:
    namespaces:
      from: All
