03_infrastructure/02_configs/traefik/http-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-grafana
  namespace: ${ENVIRONMENT}-${ns_monitoring}
spec:
  parentRefs:
    - name: ${tr_gateway} # ${tr_listener_set_prd}
      sectionName: monitoring-grafana
      group: gateway.networking.k8s.io
      kind: Gateway # ListenerSet
      namespace: ${ns_traefik}

  hostnames:
    - monitoring.${DOMAIN}

  rules:
     - matches:
        - path:
            type: PathPrefix
            value: /

       backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 3000
---
